# castform

./: Cargo.toml  readme.md  scraps.md  tasks.md
src/: main.rs
src/utils/: get_coordinates.rs  get_weather.rs  mod.rs  tokens.rs
