[package]
name = "weather-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.26"
exitfailure = "0.5.1"
reqwest = { version = "0.11.12", features = ["json"] }
serde = "1.0.147"
serde_json = "1.0.87"
serde_derive = "1.0.147"
tokio = { version = "1.21.2", features = ["full"] }
dotenv = "0.15.0"
chrono = "0.4.21"